--- a/src/app/features/reserved-area/broker/package-edit/package-edit.component.scss
+++ b/src/app/features/reserved-area/broker/package-edit/package-edit.component.scss
@@ -39,3 +39,10 @@ div.divDateTime {
 .custom-control-label {
   padding: 0;
 }
+
+.custom-invalid-feedback {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #f86c6b;
+}
