--- a/src/app/features/reserved-area/broker/package-create/package-create.component.scss
+++ b/src/app/features/reserved-area/broker/package-create/package-create.component.scss
@@ -56,3 +56,25 @@ ng-select.ng-invalid.ng-touched .ng-select-container {
   border-color: #f86c6b!important;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 3px #fde6e8 !important;
 }
+
+#yourImage {
+  width: 100px;
+  height: 70px;
+}
+
+.crop {
+  width: 50%;
+  height: 50%;
+  overflow: hidden !important;
+}
+
+.centered-and-cropped {
+  object-fit: cover
+}
+
+.custom-invalid-feedback {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #f86c6b;
+}
