--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -1,12 +1,12 @@
 <div class="table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
-    <table class="table table-striped table-borderless">
+    <table class="table table-striped table-borderless" sortable-table (sorted)="onSorted($event)">
       <thead class="text-uppercase">
       <tr>
-        <th scope="col" style="width: 38%">Titolo</th>
+        <th scope="col" sortable-column="title" style="width: 38%">Titolo</th>
         <th scope="col" style="width: 20%">Immagine</th>
-        <th scope="col" style="width: 10%">Prezzo</th>
-        <th scope="col" style="width: 10%">Data acquisto</th>
+        <th scope="col" sortable-column="price" style="width: 10%">Prezzo</th>
+        <th scope="col" sortable-column="purchase_time" style="width: 10%">Data acquisto</th>
         <th scope="col" style="width: 8%">Stato</th>
         <th scope="col" style="width: 14%"></th>
       </tr>
