--- a/src/app/core/sortable-table/sortable-column.component.html
+++ b/src/app/core/sortable-table/sortable-column.component.html
@@ -1,3 +1,3 @@
-<i class="fa fa-chevron-up" *ngIf="sortDirection === 'asc'" ></i>
-<i class="fa fa-chevron-down" *ngIf="sortDirection === 'desc'"></i>
+<i class="fa fa-chevron-up mr-1" *ngIf="sortDirection === 'asc'" ></i>
+<i class="fa fa-chevron-down mr-1" *ngIf="sortDirection === 'desc'"></i>
 <ng-content></ng-content>
