[fix] edit-coupon set categories and broker

--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="couponPass !== null" class="container-fluid">
+<div *ngIf="couponPass !== null && categoriesUpdate" class="container-fluid">
   <div class="row">
     <div class="col-lg-12 col-xl-9">
       <div class="card mx-3">
