[feat] New tables with Angular Material on producer coupon list

--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -76,7 +76,7 @@
       </li>
     </ng-container>
 
-    <select style="height: 3em;" class="custom-select mb-2 mr-sm-2 mb-sm-0 col-5" *ngIf="!desktopMode"
+    <select style="height: 3em;" class="custom-select mr-sm-2 mb-sm-0 col-5" *ngIf="!desktopMode"
             (change)="navigateTo($event.target.value)">
       <option><a selected>Seleziona...</a></option>
       <option *ngFor="let item of breadList" value='{{item.url}}'>
