--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.scss
@@ -8,8 +8,20 @@
   object-fit: cover
 }
 
-table {
-  margin-bottom: 0;
+button.mat-sort-header-button, th.mat-header-cell {
+  text-transform: uppercase !important;
+  font-weight: bold !important;
+  font-size: 15px;
+  color: black;
+}
+
+td {
+  font-size: 16px !important;
+  border: 0 !important;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #edf5fd !important;
 }
 
 p {
@@ -31,10 +43,10 @@ h5 {
 }
 
 .dropdown-menu {
-  min-width: 0!important;
+  min-width: 0 !important;
 }
 
-.fas, .far{
+.fas, .far {
   font-size: 1.3em;
 }
 
@@ -51,13 +63,14 @@ h5 {
 }
 
 #main-container {
-  padding-top: 0!important;
+  padding-top: 0 !important;
 }
 
 .card-footer div > .btn {
   font-size: 13px;
   padding: 0.4em 0.7em;
 }
+
 .card-footer {
   padding-left: 15px;
   padding-right: 15px;
