--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 // Import styles
 @import "node_modules/@coreui/coreui/scss/coreui";
 @import '~ngx-toastr/toastr-bs4-alert';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 // If you want to add something do it here
 @import "custom";
