--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -1,13 +1,13 @@
 <div class="table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
-    <table class="table table-striped table-borderless" sortable-table (sorted)="onSorted($event)">
+    <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
       <tr>
-        <th scope="col" sortable-column="title" style="width: 40%">Titolo</th>
+        <th scope="col" style="width: 40%">Titolo</th>
         <th scope="col" style="width: 20%">Immagine</th>
-        <th scope="col" sortable-column="price" style="width: 12%">Prezzo</th>
-        <th scope="col" sortable-column="purchase_time" style="width: 8%">Data</th>
-        <th scope="col" sortable-column="state" style="width: 8%">Stato</th>
+        <th scope="col" style="width: 12%">Prezzo</th>
+        <th scope="col" style="width: 8%">Data</th>
+        <th scope="col" style="width: 8%">Stato</th>
         <th scope="col" style="width: 12%"></th>
       </tr>
       </thead>
@@ -46,10 +46,10 @@
     <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
       <tr>
-        <th scope="col" sortable-column="title" style="width: 50%">Titolo</th>
-        <th scope="col" sortable-column="price" style="width: 15%">Prezzo</th>
-        <th scope="col" sortable-column="purchase_time" style="width: 15%">Data</th>
-        <th scope="col" sortable-column="state" style="width: 15%">Stato</th>
+        <th scope="col" style="width: 50%">Titolo</th>
+        <th scope="col" style="width: 15%">Prezzo</th>
+        <th scope="col" style="width: 15%">Data</th>
+        <th scope="col" style="width: 15%">Stato</th>
         <th scope="col" style="width: 5%"></th>
       </tr>
       </thead>
@@ -86,8 +86,8 @@
     <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
         <tr>
-          <th scope="col" sortable-column="title" style="width: 60%">Titolo</th>
-          <th scope="col" sortable-column="state" style="width: 20%">Stato</th>
+          <th scope="col" style="width: 60%">Titolo</th>
+          <th scope="col" style="width: 20%">Stato</th>
           <th scope="col" style="width: 20%"></th>
         </tr>
       </thead>
