[fix] Blue row on table

--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.scss
@@ -20,6 +20,10 @@ td {
   border: 0 !important;
 }
 
+tr.mat-header-row {
+  border-bottom: 5px solid #20a8d8 !important;
+}
+
 .table-striped tbody tr:nth-of-type(odd) {
   background-color: #edf5fd !important;
 }
