--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid d-none d-md-block mt-3"> <!-- d-none d-md-none d-xl-block"> -->
+<!-- Table -->
+<div class="container-fluid d-none d-md-block"> <!-- d-none d-md-none d-xl-block"> -->
   <table mat-table [dataSource]="dataSource" matSort class="table-striped w-100 mt-4 mt-md-0">
 
     <!-- Title Column -->
@@ -71,6 +72,7 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
 
+<!-- SM CARD -->
 <div class="container-fluid d-block d-md-none mb-5 mt-4">
   <div *ngIf="dataSource && dataSource.data && dataSource.data.length > 0">
     <div *ngFor="let coupon of dataSource.data" style="background-color: snow" class="card flex-row flex-wrap">
@@ -97,8 +99,9 @@
       </div>
     </div>
   </div>
-</div> <!-- SM CARD -->
+</div>
 
+<!-- Modal deletion template -->
 <ng-template #template>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Cancellazione di {{modalCoupon.title}}</h4>
