[fix] fix show data report quantity coupons

--- a/src/app/features/reserved-area/producer/report/coupon-report.component.html
+++ b/src/app/features/reserved-area/producer/report/coupon-report.component.html
@@ -22,6 +22,12 @@
           </div>
           <div class="container mt-2">
             <div class="row">
+              <google-chart  [data]="barChartForBoughtProducerQuantity" class="col"></google-chart>
+
+            </div>
+          </div>
+          <div class="container mt-2">
+            <div class="row">
               <google-chart *ngIf="pieChart.dataTable.length !== 0" [data]="pieChart" class=" col"></google-chart>
               <google-chart *ngIf="pieChart.dataTable.length !== 0" [data]="pieChart" class=" col"></google-chart>
             </div>
