[fix] fix show data report quantity coupons for broker

--- a/src/app/features/reserved-area/producer/report/coupon-report.component.html
+++ b/src/app/features/reserved-area/producer/report/coupon-report.component.html
@@ -23,7 +23,7 @@
           <div class="container mt-2">
             <div class="row">
               <google-chart  [data]="barChartForBoughtProducerQuantity" class="col"></google-chart>
-
+              <google-chart  [data]="barChartForBoughtBrokersQuantity" class="col"></google-chart>
             </div>
           </div>
           <div class="container mt-2">
