--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.scss
@@ -49,3 +49,8 @@ tbody > tr.bg-blue > td {
   border: 0;
   border-radius: 0 !important;
 }
+
+.coupon-package {
+  font-size: 1em !important;
+  padding: 5px 8px !important;
+}
