--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -1,3 +1,4 @@
+<h2 class="container-fluid">I miei acquisti</h2>
 <div class="table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
     <table class="table table-striped table-borderless">
@@ -23,7 +24,11 @@
               <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
               <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
             </td>
-            <td><img class="img-thumbnail" [src]="imageUrl(coupon.image)" style="max-width: 150px;" alt="Card image cap">
+            <td>
+              <div *ngIf="coupon.type === ITEM_TYPE.PACKAGE" class="coupon-package text-uppercase">
+                <i class="fas fa-box-open mr-1"></i>
+              </div>
+              <img class="img-thumbnail" [src]="imageUrl(coupon.image)" style="max-width: 150px;" alt="Card image cap">
             </td>
             <td>{{formatPrice(coupon.price)}}</td>
             <td>{{formatDate(coupon.purchase_time)}}</td>
