--- a/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
@@ -11,7 +11,7 @@
 
           <form [formGroup]="tokenForm">
             <div class="form-group row">
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <input type="text" formControlName="token" class="form-control" placeholder="Inserisci il token"
                        [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
                 <div *ngIf="submitted && f.token.errors " class="invalid-feedback">
@@ -19,13 +19,11 @@
                 </div>
               </div>
 
-              <div class="col-md-2 col-sm-3 my-2 my-sm-0 text-center">
+              <div *ngIf="hasCameras" class="col-md-2 col-sm-3 my-2 my-sm-0 text-center">
                 <h5 class="mb-0">oppure</h5>
               </div>
 
-              <!--<div class="w-100 d-lg-none d-md-block d-none"></div>-->
-
-              <div class="col-md-4 col-sm-5 mt-xl-0 mt-lg-0 text-sm-left text-center">
+              <div *ngIf="hasCameras" class="col-md-4 col-sm-5 mt-xl-0 mt-lg-0 text-sm-left text-center">
                 <button class="btn btn-primary" (click)="scan()">Scansiona il QR code</button>
               </div>
 
@@ -49,7 +47,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 mb-4 rounded d-flex align-items-center justify-content-center bg-hover" (click)="scan()" style="background-color: #eee;">
+            <div *ngIf="hasCameras" class="col-sm-6 mb-4 rounded d-flex align-items-center justify-content-center bg-hover" (click)="scan()" style="background-color: #eee;">
               <div *ngIf="!selectedDevice" class="position-absolute"><i class="fas fa-3x fa-camera"></i></div>
               <zxing-scanner
                 #scanner style="margin-top: 5px;" class="test-class" start="true" [device]="selectedDevice"
@@ -57,13 +55,13 @@
               </zxing-scanner>
             </div>
             <div class="col-md-12 text-sm-right text-center p-0">
-              <button *ngIf="desktopMode" (click)="import()" class="btn btn-lg btn-success"><i
-                class="fas fa-plus-circle mr-3"></i>Aggiungi ai tuoi acquisti
+              <button *ngIf="desktopMode" (click)="import()" class="btn btn-lg btn-success mt-5">
+                <i class="fas fa-plus-circle mr-3"></i>Aggiungi ai tuoi acquisti
               </button>
             </div>
             <div class="center text-center ">
-              <button *ngIf="!desktopMode" (click)="import()" class="btn btn-lg btn-success"><i
-                class="fas fa-plus-circle mr-3"></i>Importa
+              <button *ngIf="!desktopMode" (click)="importCoupon()" class="btn btn-lg btn-success">
+                <i class="fas fa-plus-circle mr-3"></i>Importa
               </button>
             </div>
           </form>
