--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -1,30 +1,29 @@
-<div class="container-fluid">
+<div class="container-fluid mb-0 mt-3 mt-md-0">
   <div class="row">
-    <div class="col-lg-12 col-xl-9">
+    <div class="col-xl-7 col-lg-10 col-md-12">
+      <div class="col-lg-5 col-md-6 p-3 bg-red-sardcoin" style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
+        <h4 class="text-white text-center text-uppercase mb-0">Vidima coupon</h4>
+      </div>
       <div class="card">
-        <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
-          <img src="assets/img/add_coupon.png" alt="Vidima coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">Vidima coupon</h6>
-        </div>
-        <div class="card-body p-5">
+        <div class="carad-body p-4">
+          <p class="text-justify" style="font-size: 16px;">In questa pagina puoi riscattare un coupon di un cliente
+          aggiungendo il suo codice o scansionando il suo codice QR.</p>
+
           <form [formGroup]="tokenForm" (ngSubmit)="verify()">
             <div class="form-group row">
-              <label class="col-lg-3 col-md-4 col-sm-3 col-form-label text-sm-left text-center">Inserisci il codice</label>
-              <div class="col-lg-3 col-md-4 col-sm-3">
-                <input type="text" formControlName="token" class="form-control"
+              <div class="col-md-4">
+                <input type="text" formControlName="token" class="form-control" placeholder="Inserisci il codice"
                        [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
                 <div *ngIf="submitted && f.token.errors " class="invalid-feedback">
                   <div *ngIf="f.token.errors">Inserisci un token valido!</div>
                 </div>
               </div>
 
-              <div class="col-lg-2 col-md-2 col-sm-2 text-center">
+              <div *ngIf="hasCameras" class="col-lg-2 col-md-2 col-sm-2 text-center">
                 <h5>oppure</h5>
               </div>
 
-              <div class="w-100 d-lg-none d-md-block d-none"></div>
-
-              <div class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center">
+              <div *ngIf="hasCameras" class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center">
                 <button class="btn btn-primary" (click)="scan()">Scansiona il QR code</button>
               </div>
 
@@ -47,11 +46,12 @@
                     </option>
                   </select>
                 </div>
+                <div *ngIf="!availableDevices">Non ci sono dispositivi disponibili.</div>
               </div>
             </div>
 
 
-            <div class="col-sm-6 mb-4 rounded container d-flex align-items-center justify-content-center bg-hover" (click)="scan()" style="background-color: #eee;">
+            <div *ngIf="hasCameras" class="col-sm-6 mb-4 rounded container d-flex align-items-center justify-content-center bg-hover" (click)="scan()" style="background-color: #eee;">
               <div *ngIf="!selectedDevice" class="position-absolute"><i class="fas fa-3x fa-camera"></i></div>
               <zxing-scanner
                 #scanner style="margin-top: 5px;" class="test-class" start="true" [device]="selectedDevice"
@@ -59,16 +59,16 @@
               </zxing-scanner>
             </div>
 
-            <div class="col-md-12 text-center p-0">
-              <button *ngIf="desktopMode" class="btn btn-lg btn-success"><i
+            <div class="col-md-12 text-md-right text-center p-0 mt-0 mt-md-5">
+              <button class="btn btn-lg btn-success"><i
                 class="fas fa-plus-circle mr-3"></i>Vidima
               </button>
             </div>
-            <div class="center text-center ">
-              <button *ngIf="!desktopMode" class="btn btn-lg btn-success"><i
+            <!--<div *ngIf="!desktopMode" class="center text-center ">
+              <button  class="btn btn-lg btn-success"><i
                 class="fas fa-plus-circle mr-3"></i>Vidima
               </button>
-            </div>
+            </div>-->
           </form>
 <!--          <form [formGroup]="tokenForm" (ngSubmit)="verify()">
             <div class="form-group row">
