--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -97,21 +97,21 @@
   </div>
 </div>
 
-<ng-template  #template>
-  <div *ngIf="modalCoupons" class="modal-header">
-    <h4 class="modal-title pull-left">
-      Seleziona il coupon
-    </h4>
-  </div>
-  <div class="modal-body">
-    <ul  class="list-group" *ngFor="let cp of modalCoupons">
-      <button *ngIf="cp.length > 0" class="button" (click)="verifyCouponFromModal(cp[0].token)">
-        <li   class="list-group-item d-flex justify-content-between align-items-center">
-          {{cp[0].Coupons[0].title}}
-          <span  class="badge badge-primary badge-pill">{{cp.length}}</span>
-        </li>
-        <span class="border-top my-3"></span>
-      </button>
-    </ul>
-  </div>
-</ng-template>
+<!--<ng-template  #template>-->
+  <!--<div *ngIf="modalCoupons" class="modal-header">-->
+    <!--<h4 class="modal-title pull-left">-->
+      <!--Seleziona il coupon-->
+    <!--</h4>-->
+  <!--</div>-->
+  <!--<div class="modal-body">-->
+    <!--<ul  class="list-group" *ngFor="let cp of modalCoupons">-->
+      <!--<button *ngIf="cp.length > 0" class="button" (click)="verifyCouponFromModal(cp[0].token)">-->
+        <!--<li   class="list-group-item d-flex justify-content-between align-items-center">-->
+          <!--{{cp[0].Coupons[0].title}}-->
+          <!--<span  class="badge badge-primary badge-pill">{{cp.length}}</span>-->
+        <!--</li>-->
+        <!--<span class="border-top my-3"></span>-->
+      <!--</button>-->
+    <!--</ul>-->
+  <!--</div>-->
+<!--</ng-template>-->
