--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -6,91 +6,116 @@
           <img src="assets/img/add_coupon.png" alt="Vidima coupon" style="width:50px; float:left; margin-right:30px"/>
           <h6 class="display-4" style="float:left; font-size:30pt;">Vidima coupon</h6>
         </div>
-        <div class="card-body p-5">
-          <form [formGroup]="tokenForm" (ngSubmit)="verify(template)">
-            <div class="form-group row">
-              <label class="col-lg-3 col-md-4 col-sm-3 col-form-label text-sm-left text-center">Inserisci il codice</label>
-              <div class="col-lg-3 col-md-4 col-sm-3">
-                <input type="text" formControlName="token" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
-                <div *ngIf="submitted && f.token.errors " class="invalid-feedback">
-                  <div *ngIf="f.token.errors">Inserisci un token valido!</div>
+        <div  class="card-body p-5">
+          <div >
+            <form   [formGroup]="tokenForm" (ngSubmit)="openModal(verifier, f.token.value)">
+                <div  class="form-group row">
+                  <label class="col-lg-3 col-md-4 col-sm-3 col-form-label text-sm-left text-center">Inserisci il codice</label>
+                  <div class="col-lg-3 col-md-4 col-sm-3">
+                    <input type="text" formControlName="token" class="form-control"
+                           [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
+                    <div *ngIf="submitted && f.token.errors " class="invalid-feedback">
+                      <div *ngIf="f.token.errors">Inserisci un token valido!</div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-2 col-md-2 col-sm-2 text-center">
+                    <h5>oppure</h5>
+                  </div>
+
+                  <div class="w-100 d-lg-none d-md-block d-none"></div>
+
+                  <div class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center">
+                    <button [disabled]="modalCoupons" class="btn btn-primary" (click)="scan()">Scansiona il QR code</button>
+                  </div>
+
+                </div>
+
+                <div [hidden]="modalCoupons" style="padding-bottom: 1em" class="col">
+                  <div *ngIf="isScan">
+                    <div *ngIf="availableDevices">
+                      <select
+                        class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
+                        (change)="onDeviceSelectChange($event.target.value)">
+                        <option
+                          class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
+                          value="" [selected]="!selectedDevice">Seleziona
+                        </option>
+                        <option
+                          class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
+                          *ngFor="let device of availableDevices" [value]="device.deviceId"
+                          [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+
+
+                <div [hidden]="modalCoupons" class="col-sm-6 mb-4 rounded container d-flex align-items-center justify-content-center bg-hover" (click)="scan()" style="background-color: #eee;">
+                  <div [hidden]="modalCoupons" *ngIf="!selectedDevice" class="position-absolute"><i class="fas fa-3x fa-camera"></i></div>
+                  <zxing-scanner [hidden]="modalCoupons"
+                                 #scanner style="margin-top: 5px;" class="test-class" start="true" [device]="selectedDevice"
+                    (scanSuccess)="handleQrCodeResult($event)">
+                  </zxing-scanner>
+                </div>
+
+                <div [hidden]="modalCoupons" class="col-md-12 text-center p-0">
+                  <button [disabled]="modalCoupons" *ngIf="desktopMode" class="btn btn-lg btn-success"><i
+                    class="fas fa-plus-circle mr-3"></i>Vidima
+                  </button>
+                </div>
+                <div [hidden]="modalCoupons"  class="center text-center ">
+                  <button [disabled]="modalCoupons" *ngIf="!desktopMode" class="btn btn-lg btn-success"><i
+                          class="fas fa-plus-circle mr-3"></i>Vidima
+                  </button>
+                </div>
+            </form>
+          </div>
+          <!--Coupons from package-->
+
+          <div *ngIf="modalCoupons" class="card-header" style="margin-top: 5%; background-color: rgba(184,232,245,0.11)">
+            <div class="row col-12 ">
+              <div class="row col-10" style="padding-bottom: 10px; padding-left: 5%"><h4 style="padding-top: 1%">
+                Coupons del pacchetto <strong>"{{titlePackage}}"</strong> vidimabili</h4></div>
+              <div class="col-2"><button (click)="exitPackage()" type="button" class="btn btn-danger">Esci</button></div>
+            </div>
+            <div *ngFor="let cp of modalCoupons">
+              <div *ngIf="cp.length > 0" class="card text-center">
+                <div class="card-header">
+                  {{cp[0].Coupons[0].title}}
+                </div>
+                <div class="card-body">
+                  <p class="card-text">{{cp[0].Coupons[0].description}}</p>
+                  <a  (click)="openModalCouponFromPackage(cp[0].token, verifierFromPackage)" class="btn btn-success mr-1"><i class="fas fa-plus-circle mr-3"></i>Vidima</a>
+                </div>
+                <div class="card-footer text-muted">
+                  Quantità: {{cp.length}}
                 </div>
               </div>
 
-              <div class="col-lg-2 col-md-2 col-sm-2 text-center">
-                <h5>oppure</h5>
-              </div>
-
-              <div class="w-100 d-lg-none d-md-block d-none"></div>
-
-              <div class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center">
-                <button class="btn btn-primary" (click)="scan()">Scansiona il QR code</button>
-              </div>
-
-            </div>
-
-            <div style="padding-bottom: 1em" class="col">
-              <div *ngIf="isScan">
-                <div *ngIf="availableDevices">
-                  <select
-                    class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
-                    (change)="onDeviceSelectChange($event.target.value)">
-                    <option
-                      class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
-                      value="" [selected]="!selectedDevice">Seleziona
-                    </option>
-                    <option
-                      class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
-                      *ngFor="let device of availableDevices" [value]="device.deviceId"
-                      [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}
-                    </option>
-                  </select>
+              <ng-template #verifierFromPackage>
+                <div class="modal-header">
+                  <h4 class="modal-title pull-left">Validare il coupon?</h4>
+                  <button type="button" class="close pull-right" aria-label="Close" (click)="closeModalFalse()">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                 </div>
-              </div>
-            </div>
 
-
-            <div class="col-sm-6 mb-4 rounded container d-flex align-items-center justify-content-center bg-hover" (click)="scan()" style="background-color: #eee;">
-              <div *ngIf="!selectedDevice" class="position-absolute"><i class="fas fa-3x fa-camera"></i></div>
-              <zxing-scanner
-                #scanner style="margin-top: 5px;" class="test-class" start="true" [device]="selectedDevice"
-                (scanSuccess)="handleQrCodeResult($event)">
-              </zxing-scanner>
-            </div>
-
-            <div  class="col-md-12 text-center p-0">
-              <button [disabled]="modalCoupons" *ngIf="desktopMode" class="btn btn-lg btn-success"><i
-                class="fas fa-plus-circle mr-3"></i>Vidima
-              </button>
-            </div>
-            <div  class="center text-center ">
-              <button [disabled]="modalCoupons" *ngIf="!desktopMode" class="btn btn-lg btn-success"><i
-                      class="fas fa-plus-circle mr-3"></i>Vidima
-              </button>
-            </div>
-    <!--Coupons from package-->
-            <div *ngIf="modalCoupons" class="card-header" style="margin-top: 5%; background-color: rgba(184,232,245,0.11)">
-              <div class="row col-12 ">
-                <div class="row col-10" style="padding-bottom: 10px; padding-left: 5%"><h4 style="padding-top: 1%">Coupons nel pacchetto vidimabili</h4></div>
-                <div class="col-2"><button (click)="exitPackage()" type="button" class="btn btn-danger">Esci</button></div>
-              </div>
-              <div *ngFor="let cp of modalCoupons">
-                <div *ngIf="cp.length > 0" class="card text-center">
-                  <div class="card-header">
-                    {{cp[0].Coupons[0].title}}
-                  </div>
-                  <div class="card-body">
-                    <p class="card-text">{{cp[0].Coupons[0].description}}</p>
-                    <a  (click)="verifyFromPackage(cp[0].token)" class="btn btn-success mr-1"><i class="fas fa-plus-circle mr-3"></i>Vidima</a>
-                  </div>
-                  <div class="card-footer text-muted">
-                    Quantità: {{cp.length}}
-                  </div>
+                <div class="modal-body">
+                  Attenzione! <strong>L'operazione è irreversibile!</strong>
                 </div>
-              </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" (click)="closeModalFalse()">No</button>
+                  <button type="button" class="btn btn-success" (click)="verifyFromPackage(cp[0].token)">
+                    Si
+                  </button>
+                </div>
+              </ng-template>
+
             </div>
-          </form>
+          </div>
         </div>
       </div>
     </div>
@@ -105,7 +130,7 @@
   <!--</div>-->
   <!--<div class="modal-body">-->
     <!--<ul  class="list-group" *ngFor="let cp of modalCoupons">-->
-      <!--<button *ngIf="cp.length > 0" class="button" (click)="verifyCouponFromModal(cp[0].token)">-->
+      <!--<button *ngIf="cp.length > 0" class="button" (click)="verifyCouponQuantity(cp[0].token)">-->
         <!--<li   class="list-group-item d-flex justify-content-between align-items-center">-->
           <!--{{cp[0].Coupons[0].title}}-->
           <!--<span  class="badge badge-primary badge-pill">{{cp.length}}</span>-->
@@ -115,3 +140,23 @@
     <!--</ul>-->
   <!--</div>-->
 <!--</ng-template>-->
+<ng-template #verifier>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Validare il coupon?</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModalFalse()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    Attenzione! <strong>L'operazione è irreversibile!</strong>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" (click)="closeModalFalse()">No</button>
+    <button type="button" class="btn btn-success" (click)="verify()">
+      Si
+    </button>
+  </div>
+</ng-template>
+
