--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -96,7 +96,7 @@
 
               <ng-template #verifierFromPackage>
                 <div class="modal-header">
-                  <h4 class="modal-title pull-left">Validare il coupon?</h4>
+                  <h4 class="modal-title pull-left">Vidimare il coupon?</h4>
                   <button type="button" class="close pull-right" aria-label="Close" (click)="closeModalFalse()">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -142,7 +142,7 @@
 <!--</ng-template>-->
 <ng-template #verifier>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Validare il coupon?</h4>
+    <h4 class="modal-title pull-left">Vidimare il coupon?</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="closeModalFalse()">
       <span aria-hidden="true">&times;</span>
     </button>
